--- a/src/global.css
+++ b/src/global.css
@@ -7,8 +7,8 @@
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f0f2f5;
-  color: #111;
+  background-color: #161717;
+  color: white;
 }
 
 a {
