--- a/src/layout.css
+++ b/src/layout.css
@@ -8,11 +8,14 @@
 
 /* Sidebar con la lista de contactos */
 .sidebar {
+  display: flex;
+  flex-direction: column;
   width: 30%;
-  background-color: white;
-  border-right: 1px solid #ddd;
-  overflow-y: auto;
+  background-color: #202c33 !important; 
+  border-right: 1px solid #2a3942;
+  overflow: hidden;
   min-width: 280px;
+
 }
 
 /* Pantalla de chat */
